<resources>
    <string name="app_name">Crypto</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="market">Market</string>
    <string name="favourites">Favourites</string>
    <string name="smooth_bottom_bar">smooth bottom bar</string>
    <string name="search_hint">Search Crypto</string>
    <string name="not_found">Data Not Found</string>
    <string name="top_crypto">Top Crypto (24 Hr)</string>
    <string name="_1m">1 mon</string>
    <string name="_1w">1 w</string>
    <string name="_1d">1d</string>
    <string name="_4h">4h</string>
    <string name="_1h">1h</string>
    <string name="_15m">15m</string>
</resources>