<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/royal_blue_dark"
        tools:context=".fragment.DetailsFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/detailAppbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:paddingTop="8dp"
            android:paddingEnd="12dp"
            android:paddingBottom="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/addWatchlistButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:padding="8dp"
                android:src="@drawable/ic_star_outline"
                app:layout_constraintBottom_toBottomOf="@+id/detailSymbolTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/detailSymbolTextView" />

            <ImageButton
                android:id="@+id/backStackButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="8dp"
                android:src="@drawable/ic_back_stack"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/detailImageView"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginTop="4dp"
                app:layout_constraintEnd_toEndOf="@+id/detailSymbolTextView"
                app:layout_constraintStart_toStartOf="@+id/detailSymbolTextView"
                app:layout_constraintTop_toBottomOf="@+id/detailSymbolTextView"
                tools:srcCompat="@tools:sample/avatars" />


            <TextView
                android:id="@+id/detailSymbolTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/backStackButton"
                app:layout_constraintEnd_toStartOf="@+id/addWatchlistButton"
                app:layout_constraintStart_toEndOf="@+id/backStackButton"
                app:layout_constraintTop_toTopOf="@+id/backStackButton"
                tools:text="BTC" />

            <TextView
                android:id="@+id/detailPriceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="@+id/detailImageView"
                app:layout_constraintStart_toStartOf="@+id/detailImageView"
                app:layout_constraintTop_toBottomOf="@+id/detailImageView"
                tools:text="$108.56" />


            <LinearLayout
                android:id="@+id/detailPriceChange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@+id/detailPriceTextView"
                app:layout_constraintStart_toStartOf="@+id/detailPriceTextView"
                app:layout_constraintTop_toBottomOf="@+id/detailPriceTextView">

                <ImageView
                    android:id="@+id/detailChangeImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    tools:srcCompat="@drawable/ic_caret_up" />

                <TextView
                    android:id="@+id/detailChangeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/green"
                    android:textSize="18sp"
                    tools:text="2.68%" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>



        <WebView
            android:id="@+id/detaillChartWebView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailAppbar" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/detailChart"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detaillChartWebView">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/one_month_btn"
                android:layout_width="58dp"
                android:layout_height="36dp"
                android:layout_marginTop="8dp"
                android:background="@null"
                android:text="@string/_1m"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/one_week_btn"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/one_week_btn"
                android:layout_width="58dp"
                android:layout_height="36dp"
                android:background="@null"
                android:text="@string/_1w"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/one_month_btn"
                app:layout_constraintEnd_toStartOf="@+id/one_month_btn"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/one_day_btn"
                app:layout_constraintTop_toTopOf="@+id/one_month_btn" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/one_day_btn"
                android:layout_width="58dp"
                android:layout_height="36dp"
                android:background="@drawable/active_button"
                android:text="@string/_1d"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/one_week_btn"
                app:layout_constraintEnd_toStartOf="@+id/one_week_btn"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/four_hr_btn"
                app:layout_constraintTop_toTopOf="@+id/one_week_btn" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/four_hr_btn"
                android:layout_width="58dp"
                android:layout_height="36dp"
                android:background="@null"
                android:text="@string/_4h"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/one_day_btn"
                app:layout_constraintEnd_toStartOf="@+id/one_day_btn"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/one_hr_btn"
                app:layout_constraintTop_toTopOf="@+id/one_day_btn" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/one_hr_btn"
                android:layout_width="58dp"
                android:layout_height="36dp"
                android:background="@null"
                android:text="@string/_1h"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/four_hr_btn"
                app:layout_constraintEnd_toStartOf="@+id/four_hr_btn"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/fifteen_min_btn"
                app:layout_constraintTop_toTopOf="@+id/four_hr_btn" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/fifteen_min_btn"
                android:layout_width="58dp"
                android:layout_height="36dp"
                android:background="@null"
                android:text="@string/_15m"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/one_hr_btn"
                app:layout_constraintEnd_toStartOf="@+id/one_hr_btn"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/one_hr_btn" />

        </androidx.constraintlayout.widget.ConstraintLayout>


<!--        <androidx.constraintlayout.widget.ConstraintLayout-->
<!--            android:id="@+id/AllDetail"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="0dp"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:background="@drawable/detail_content_bg"-->
<!--            android:paddingStart="12dp"-->
<!--            android:paddingTop="8dp"-->
<!--            android:paddingEnd="12dp"-->
<!--            android:paddingBottom="8dp"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@id/detailChart">-->


<!--            <androidx.recyclerview.widget.RecyclerView-->
<!--                android:id="@+id/detailRecyclerView"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="0dp"-->
<!--                android:orientation="vertical"-->
<!--                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent" />-->

<!--        </androidx.constraintlayout.widget.ConstraintLayout>-->


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>